# rustgit

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/rustgit/: Cargo.toml
crates/rustgit/src/: database.rs  hash.rs  head.rs  index.rs  is_executable.rs  lib.rs  lockfile.rs  object.rs  object_reader.rs  oid.rs  parse_utils.rs  read_ext.rs  references.rs  repository.rs  utils.rs  write_utils.rs
crates/rustgit/src/object/: blob.rs  commit.rs  header.rs  mod.rs  tree.rs
crates/rustgit_cli/: Cargo.toml
crates/rustgit_cli/src/: main.rs
crates/rustgit_cli/src/commands/: add.rs  cat_file.rs  commit.rs  commit_tree.rs  hash_object.rs  init.rs  ls_files.rs  ls_tree.rs  mod.rs  rev_parse.rs  status.rs  write_tree.rs
crates/rustgit_cli/tests/integration/: common.rs
crates/rustgit_cli/tests/integration/commands/: add.rs  cat_file.rs  commit.rs  commit_tree.rs  hash_object.rs  init.rs  ls_files.rs  ls_tree.rs  mod.rs  rev_parse.rs  status.rs  write_tree.rs
crates/rustgit_cli/tests/integration/commands/snapshots/: integration__commands__add__files.snap  integration__commands__add__folder.snap  integration__commands__add__incremental 1.snap  integration__commands__add__incremental 2.snap  integration__commands__commit__commit_with_parent.snap  integration__commands__ls_files__after stage.snap  integration__commands__ls_files__files.snap  integration__commands__ls_files__stage.snap  integration__commands__status__init.snap  integration__commands__write_tree__partial_index.snap  integration__commands__write_tree__sort_in_correct_order.snap
crates/test_utils/: Cargo.toml
crates/test_utils/src/: fs_utils.rs  lib.rs
plumbing/: Cargo.toml
plumbing/src/: hash.rs  lib.rs  object.rs  references.rs  repository.rs  utils.rs
src/: git_object_util.rs  lockfile.rs  main.rs  object.rs  parse_util.rs  repository.rs  sha1hash.rs  write_utils.rs
src/commands/: cat_file.rs  commit.rs  commit_tree.rs  hash_object.rs  init.rs  ls_tree.rs  mod.rs  rev_parse.rs  write_tree.rs
tests/integration/: cat_file.rs  commit.rs  commit_tree.rs  common.rs  hash_object.rs  init.rs  ls_tree.rs  main.rs  rev_parse.rs  write_tree.rs
tests/integration/commands/: cat_file.rs  commit_tree.rs  hash_object.rs  mod.rs
tests/integration/commands/snapshots/: integration__commands__commit__initial_commit.snap  integration__commands__commit_tree__with_author_as_env_var.snap  integration__commands__commit_tree__with_parent.snap  integration__commands__write_tree__write_tree.snap
tests/integration/snapshots/: integration__commit__commit_with_parent.snap  integration__commit__initial_commit.snap  integration__commit_tree__with_author_as_env_var.snap  integration__commit_tree__with_parent.snap  integration__write_tree__write_tree.snap
