[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.76"
edition = "2021"
license = "MIT"
authors = ["Lesley Lai <lesley@lesleylai.info>"]


[profile.dev.package]
insta.opt-level = 2
lazy_static.opt-level = 2
assert_cmd.opt-level = 2
predicates.opt-level = 2
anyhow.opt-level = 2
thiserror.opt-level = 2
flate2.opt-level = 2
clap.opt-level = 2
hex.opt-level = 2
sha1.opt-level = 2