[package]
name = "rustgit"
version = "0.1.0"
edition = "2021"
authors = ["Lesley Lai <lesley@lesleylai.info>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"                                    # error handling
sha1 = "0.10.6"                                      # hashing
hex = "0.4.3"                                        # working with hash output
flate2 = "1.0"                                    # gzip compression
thiserror = "1.0.61"
chrono = "0.4.38"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }

[dev-dependencies]
test_utils = { path = "../test_utils" }

[lib]
path = "src/lib.rs"
doc = true