[package]
name = "rustgit_cli"
version = "0.1.0"
edition = "2021"
authors = ["Lesley Lai <lesley@lesleylai.info>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] } # creating a cli
flate2 = "1.0"                                      # gzip compression
anyhow = "1.0.81"                                   # error handling
thiserror = "1.0.58"
rustgit = { path = "../rustgit" }

[dev-dependencies]
test_utils = { path = "../test_utils" }
assert_cmd = "2.0.14"
predicates = "3.1.0"
lazy_static = "1.4.0"
insta = { version = "1.38.0", features = ["filters"] }

[[bin]]
name = "rustgit"
path = "src/main.rs"
doc = false